# RobotActuator

./: CMakeLists.txt  prj.conf
algorithm/: CMakeLists.txt
algorithm/Inc/: ahrs_deprecated.hpp  algorithm_macro.hpp  algorithm_utils.hpp  foc_controller.hpp  open_loop_controller.hpp  pid_controller.hpp  trap_traj.hpp
algorithm/Src/: ahrs_deprecated.cpp  foc_controller.cpp  open_loop_controller.cpp  pid_controller.cpp  trapTraj.cpp  trap_traj.cpp
app/Inc/: interrupt.hpp
app/Src/: interrupt.cpp  main.cpp
boards/: stm32_g431cb.overlay
boards/arm/stm32_g431cb/: Kconfig.board  Kconfig.defconfig  board.cmake  nucleo_g431rb.yaml  stm32_g431cb.dts
device/: CMakeLists.txt
device/Inc/: absolute_encoder.hpp  adc_device.hpp  angle_encoder_abstract.hpp  icm42688.hpp  imu_abstract.hpp  led_device.hpp  linear_hall_angle_encoder.hpp  pwm_device.hpp
device/Src/: absolute_encoder.cpp  adc_device.cpp  angle_encoder_abstract.cpp  icm42688.cpp  imu_abstract.cpp  led_device.cpp  linear_hall_angle_encoder.cpp  pwm_device.cpp
drivers/zephyr/: Kconfig
drivers/zephyr/sensor/: CMakeLists.txt  Kconfig
framework/: CMakeLists.txt
framework/Inc/: motor_control_factory.hpp
framework/Src/: motor_control_factory.cpp
hal/: CMakeLists.txt
hal/Inc/: impl_adc.hpp  impl_pwm.hpp  stm32_encoder.h
hal/Src/: impl_adc.cpp  impl_pwm.cpp  stm32_encoder.c
middleware/: CMakeLists.txt
test/: CMakeLists.txt
thridpart/: CMakeLists.txt
thridpart/Eigen/: CMakeLists.txt
util/: CMakeLists.txt
util/Inc/: component_port.hpp  time_util.h
util/design_patterns/: CMakeLists.txt
(+54 files in other folders)
